# UUV-CCPP

EROAS-main/: FRAMEWORK_STRUCTURE.md  MPC_GLOBAL_LOCAL_MAINLINE.md  PROJECT_INTERVIEW_GUIDE.md  UAV_TO_UUV_MPC_ADAPTATION_GUIDE.md
EROAS-main/example/: CMakeLists.txt  package.xml
EROAS-main/example/scripts/: local_avoidance_planner.py  pose_gt_to_tf.py
EROAS-main/example/src/config/: local_mpc_adapter.yaml  trajectory_visualization.rviz
EROAS-main/example/src/launch/: compact_rexrov_with_trajectory.launch
EROAS-main/example/src/robots/: rexrov_defaulter.xacro
EROAS-main/example/src/rviz/: rexrov_trajectoryer.rviz
EROAS-main/example/src/scripts/guiji/: trajectory_20260206waypoints.yaml  trajectory_to_waypoints_loader.py
EROAS-main/example/src/worlds/: compact_underwater_terrainqqq.world
EROAS-main/underwater_coverage_planning/: CMakeLists.txt  SIP_feasible_edges_issue_and_fix.md  package.xml
EROAS-main/underwater_coverage_planning/config/: chapter5_online_scenarios.yaml  sip_uuv_planner.yaml
EROAS-main/underwater_coverage_planning/scripts/: actual_path_recorder.py  build_chapter5_tables_doc.py  chapter5_extract_online_metrics.py  chapter5_fake_obstacle_markers.py  chapter5_global_batch.py  chapter5_online_batch.py  generate_stage_html_visualizations.py  global_coverage_manager.py  interactive_sip_coverage_planner.py  path_publisher.py  trajectory_to_ros.py
EROAS-main/underwater_coverage_planning/scripts/guiji/: trajectory_20260223_190253_ros_waypoints.yaml
EROAS-main/underwater_coverage_planning/scripts/sip_coverage/: config.py  (+12 more)
EROAS-main/uuv_mpc_adapter/: CMakeLists.txt  package.xml
EROAS-main/uuv_mpc_adapter/src/: mpc_uuv_adapter_node.cpp
LKH/: LKH
LKH/SRC/: Makefile
dynamic_predictor/: CMakeLists.txt  README.md  package.xml
dynamic_predictor/cfg/: detector_param.yaml  dynamic_map_param.yaml  fake_detector_param.yaml  predictor_param.yaml
dynamic_predictor/include/dynamic_predictor/: dynamicPredictor.cpp  dynamicPredictor.h  utils.h
dynamic_predictor/launch/: predictor.launch  predictor_with_fake_detector.launch
dynamic_predictor/rviz/: predictor.rviz
dynamic_predictor/src/: dynamic_predictor_fake_node.cpp  dynamic_predictor_node.cpp
global_planner/: CMakeLists.txt  package.xml
global_planner/src/: globalPlannerLib.cpp
map_manager/: CMakeLists.txt
map_manager/cfg/: dynamic_map_param.yaml  occupancy_map_param.yaml
map_manager/include/map_manager/: occupancyMap.cpp  occupancyMap.h
map_manager/launch/: dynamic_map.launch
onboard_detector/: CMakeLists.txt  package.xml
onboard_detector/cfg/: detector_param.yaml
onboard_detector/launch/: run_detector.launch
onboard_detector/rviz/: detector.rviz
trajectory_planner/: CMakeLists.txt  package.xml
trajectory_planner/cfg/bspline_interactive/: occupancy_map.yaml
trajectory_planner/cfg/mpc_interactive/: mpc_param.yaml  obstacle_test_param.yaml  occupancy_map.yaml  polyTraj_param.yaml
trajectory_planner/include/trajectory_planner/: mpcPlanner.cpp  mpcPlanner.h  polyTrajOccMap.cpp
trajectory_planner/map/: dronearena_box_static_map.pcd  real_dronearena.pcd
trajectory_planner/rviz/: mpc_interactive.rviz
trajectory_planner/src/: mpc_node.cpp  mpc_solver_setup.cpp
(+15 files in other folders)
