<?xml version="1.0"?>
<package format="2">
  <name>eroas_example</name>
  <version>0.0.1</version>
  <description>Example launch and planning helpers for EROAS RexROV.</description>

  <maintainer email="tb@example.com">tb</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>uuv_control_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>xacro</depend>

  <export>
  </export>
</package>
