<?xml version="1.0"?>
<package format="2">
  <name>uuv_mpc_adapter</name>
  <version>0.0.1</version>
  <description>MPC adapter node for RexROV/UUV trajectory control.</description>

  <maintainer email="tb@example.com">tb</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>uuv_control_msgs</depend>
  <depend>trajectory_planner</depend>
  <depend>global_planner</depend>
  <depend>dynamic_predictor</depend>
  <depend>map_manager</depend>

  <export>
  </export>
</package>
